# huggingface-model-scorer

./: .env  .env.example  .gitignore  LLM_SETUP.md  README.md  bc.txt  example.txt  log.txt  ptim  pyproject.toml  requirements.txt  run.py  test_performance_claims_direct.py  zhan4453.md
src/huggingface_model_scorer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/metrics/: __init__.py  base.py  busfactor.py  code_quality.py  dataset_quality.py  documentation.py  license.py  metrics_base.py  performance_claims.py  ramp-up.py  ramp_up.py  size.py
src/output/: ndjson_formatter.py
src/parsing/: __init__.py  example.ndjson  example.txt  readme_parser.py  url-parser.py  url_base.py  url_parser.py
test/: test_code_quality.py  test_documentation.py  test_license.py  test_metrics.py  test_performance_claims.py  test_ramp_up.py  test_size.py
tests/: test_bus_factor.py  test_code_quality.py  test_dataset_quality.py  test_documentation.py  test_license.py  test_performance_claims.py  test_ramp_up.py  test_size.py
